--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/abhishekgarfield/learning_express#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
