--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
